force-app/main/default/objects/Mobile_Notification__c/Mobile_Notification__c.object-meta.xml
<CustomObject>
    <label>Mobile Notification</label>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>