force-app/main/default/objects/Mobile_Notification__c/fields/Acknowledgment_Required__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BA: NPLMA - Identifies what notifications require a response</description>
    <label>Acknowledgment Required?</label>
    <type>Checkbox</type>
</CustomField>