force-app/main/default/objects/Mobile_Notification__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>BA: NPLMA - Used to define type of notification sent to mobile user</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional Stand Down</fullName>
            </value>
            <value>
                <fullName>Field Communications/Special Events</fullName>
            </value>
            <value>
                <fullName>Contract Updates</fullName>
            </value>
            <value>
                <fullName>Customer Standards/Protocol Updates</fullName>
            </value>
            <value>
                <fullName>Best Practice Changes</fullName>
            </value>
            <value>
                <fullName>Corporate Stand Down</fullName>
            </value>
            <value>
                <fullName>Safety Communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>