force-app/main/default/objects/Mobile_Notification__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <description>BA: NPLMA - % complete of assigned notifications</description>
    <formula>Notifications_Complete__c/ Notifications_Assigned__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>