force-app/main/default/objects/Mobile_Notification__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>BA: NPLMA - Details of the notification sent to mobile user</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>