force-app/main/default/objects/Mobile_Notification__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>BA: NPLAMA - Identify when the custom notification should be completed</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>