force-app/main/default/objects/Mobile_Notification__c/fields/Notifications_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Notifications_Assigned__c</fullName>
    <label>Notifications Assigned</label>
    <summaryForeignKey>Notification_Assignment__c.Mobile_Notification__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>