force-app/main/default/objects/Mobile_Notification__c/fields/Notifications_Complete__c.field-meta.xml
<CustomField>
    <fullName>Notifications_Complete__c</fullName>
    <label>Notifications Complete</label>
    <summaryFilterItems>
        <field>Notification_Assignment__c.Status__c</field>
        <operation>equals</operation>
        <value>Complete</value>
    </summaryFilterItems>
    <summaryForeignKey>Notification_Assignment__c.Mobile_Notification__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>