force-app/main/default/objects/Mobile_Notification__c/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <description>26160</description>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Toolbox Talk</fullName>
            </value>
            <value>
                <fullName>Required Toolbox Talk Training</fullName>
            </value>
            <value>
                <fullName>Weekly Safety Meeting</fullName>
            </value>
            <value>
                <fullName>Red Alert</fullName>
            </value>
            <value>
                <fullName>Lesson Learned</fullName>
            </value>
            <value>
                <fullName>Area Specific Safety Message</fullName>
            </value>
            <value>
                <fullName>Safety Bulletin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>