force-app/main/default/objects/Mobile_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Complete__c</columns>
    <columns>Notifications_Assigned__c</columns>
    <columns>Notifications_Complete__c</columns>
    <columns>Signature_Required__c</columns>
    <columns>Acknowledgment_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>