force-app/main/default/objects/Mobile_Notification__c/listViews/All_Complete.listView-meta.xml
<ListView>
    <fullName>All_Complete</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Due_Date__c</columns>
    <columns>Description__c</columns>
    <columns>Category__c</columns>
    <columns>Sub_Category__c</columns>
    <columns>Complete__c</columns>
    <columns>Notifications_Assigned__c</columns>
    <columns>Notifications_Complete__c</columns>
    <columns>Signature_Required__c</columns>
    <columns>Acknowledgment_Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Complete__c</field>
        <operation>equals</operation>
        <value>100.0</value>
    </filters>
    <label>All - Complete</label>
</ListView>